--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -250,9 +250,9 @@
     border:1px solid #e4e8ee;
     padding:4px 4px;
     border-radius:4px;
+    margin-right: 30px;
   }  
   .clues-title-btn{
-    padding-left: 30px;
     .el-button.el-button--primary{
       float: left;
       line-height: 1;
@@ -618,31 +618,26 @@
   z-index:1000!important;
 }
 /**级别修改记录**/
-.popoverzz{position: absolute;left:0px; top:0px; width: 100%; height: 100%;transition:all 0.5s; background:#000; opacity: 0.8; z-index: 2;}
 .popover{
   clear: both;
   display: block;
-  position: absolute;
   z-index: 3;
-  background: #fff;
-  border-radius: 10px;
-  border: 2px solid #ccc;
-  width: 80%;
+  width: 80%!important;
   max-width: 800px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   overflow: hidden;
-  padding-bottom: 20px;
-  .popoverTit{
+  margin: 0px !important;
+  .el-dialog__header{
     clear: both;
     background: #f1f1f1;
-    padding: 10px 10px;
+    padding: 15px 10px;
+    font-size: 14px;
   }
   ul{
     clear: both;
     display: block;
-    padding:20px;
     li{
       clear: both;
       display: block;
@@ -664,22 +659,25 @@
       }
     }
   }
-  &>span{
-    clear: both;
-    display: block;
-    width: 79px;
-    height: 32px;
-    line-height: 32px;
-    background: #2e88ff;
-    color: #fff;
-    font-size: 14px;
-    font-weight: bold;
-    margin: 0 auto;
-    text-align: center;
-    border-radius: 5px;
-    cursor: pointer;
-    &:hover{
-      opacity: 0.6;
+  .el-dialog__footer{
+    padding: 0px 20px 20px 20px;
+    span{
+      clear: both;
+      display: block;
+      width: 79px;
+      height: 32px;
+      line-height: 32px;
+      background: #2e88ff;
+      color: #fff;
+      font-size: 14px;
+      font-weight: bold;
+      margin: 0 auto;
+      text-align: center;
+      border-radius: 5px;
+      cursor: pointer;
+      &:hover{
+        opacity: 0.6;
+      }
     }
   }
 }
@@ -692,29 +690,17 @@
   color:#2e84f6;
   line-height:24px;
   padding-bottom:10px;
+  .svg-i{
+    margin-right: 10px;
+    float: left;
+    line-height: 22px;
+    .svg-icon{
+          width:22px;
+          height:22px;
+          vertical-align: middle;
+    }
+  }
 }
-//.clues-title{
-//  clear: both;
-//  display: block;
-//  overflow: hidden;
-//  h2{
-//      float: left;
-//      font-size:18px;
-//      color:#2e84f6;
-//      line-height:32px;
-//     i{
-//        margin-right: 10px;
-//        float: left;
-//        line-height: 22px;
-//        margin-top: 3px;
-//        .svg-icon{
-//             width:22px;
-//             height:22px;
-//             vertical-align: middle;
-//        }
-//     }
-//  }
-//}
 /*表格样式*/
 .el-table.SiteTable{
   border-radius:8px;
