--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -211,8 +211,11 @@
         background:#f5f7fa;
         border-radius: 4px;
         padding:2px 10px;
-        margin-left:20px;
+        margin-right:20px;
         margin-bottom: 5px;
+        &:last-child{
+          margin-right:0px;
+        }
         &:hover,&.active{
           background:$menuActiveText;
           color:#fff;
@@ -229,10 +232,13 @@
       border-radius:8px;
       border:1px solid #c7cbd5;
       padding:30px 20px;
-      margin-right:30px;
+      margin-left:30px;
       background:#fff;
       box-shadow:0px 9px 15px rgba(72,118,164,0.13);
       margin-top:15px;
+      &:first-child{
+        margin-left:0px;
+      }
       dt,dd{
         clear: both;
         display: block;
@@ -317,4 +323,111 @@
   }
 }
 
+}
+@media (max-width:1280px){
+  .ChinaphoneNum{
+    .card-header{
+      h2{
+        float:none;
+        clear: both;
+        font-size:20px;
+      }
+      .ChinaphoneNumTag{
+        float:none;
+        clear: both;
+        padding-top:15px;
+      }
+    } 
+    .ChinaphoneNumItem{
+      clear: both;
+      padding-top:10px;
+      overflow: hidden;
+      dl{
+        width:31.3333%;
+        margin-left:3%;
+        dt{
+          font-size: 14px;
+        }
+        dd{
+          font-size:35px;
+        }
+      }
+    }   
+  }
+  .ChinaphoneMap{
+    .card-header{
+      h2{
+        float:none;
+        clear: both;
+        font-size:20px;
+      }
+      .ChinaphoneMapDate{
+        clear: both;
+        float:none;
+        padding-top:10px;
+        overflow: hidden;
+      }
+    } 
+  }
+}
+@media (max-width:992px){
+  .ChinaphoneNum{
+    padding: 20px 17px;
+    .ChinaphoneNumItem{
+      dl{
+        padding: 20px 15px;
+      }
+    }   
+  }  
+  .ChinaphoneMap{
+    padding: 20px 17px;
+    .card-header{
+      .ChinaphoneMapDate{
+        float:none;
+        clear: both;
+      }
+    } 
+  }
+}
+@media (max-width:750px){
+  .ChinaphoneNum{
+    .card-header{
+      h2{
+        font-size:18px;
+      }
+      .ChinaphoneNumTag{
+        .item-clues{
+          margin-right:10px;
+          margin-bottom:10px;
+        }
+      }
+    } 
+    .ChinaphoneNumItem{
+      dl{
+        dt{padding-bottom: 10px;}
+        dd{
+          font-size:30px;
+        }
+      }
+    }   
+  }
+  .ChinaphoneMap{
+    .card-header{
+      h2{
+        font-size:18px;
+      }
+    } 
+  }
+}
+@media (max-width:450px){
+  .ChinaphoneNum{
+    .ChinaphoneNumItem{
+      dl{
+        padding: 15px 10px;
+        dd{
+          font-size:20px;
+        }
+      }
+    }   
+  }
 }
