--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -1,4 +1,9 @@
-﻿.page-root.Chinaphone{
+﻿.cn-phone-index{
+  .sub-router{
+    width:210px;
+  }
+}
+.page-root.Chinaphone{
   .search-wrap{
     padding-bottom:20px;
     .search-panelOne{
