--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -74,9 +74,9 @@
               padding-bottom: 2%;
               dl{
                 float: left;
-                margin-left:2%;
+                margin-left:20px;
                 margin-top: 2%;
-                width: 22.5%;
+                width:322px;
                 border:1px solid #f0f0f0;
                 background:#ffffff;
                 box-shadow:0px 5px 13px rgba(120,136,158,0.07);
@@ -134,7 +134,7 @@
                 clear: both;
                 display: block;
                 font-size:15px;
-                padding:7px 0px 7px 2%;
+                padding:7px 0px 7px 20px;
                 line-height:24px;
                 text-align: left;
                 color:#263445;
@@ -144,9 +144,9 @@
                 display: block;
                 .itemPane{
                   float: left;
-                  margin-left:2%;
-                  margin-top: 10px;
-                  width: 22.5%;
+                  margin-left: 20px;
+                  margin-top: 15px;
+                  width:322px;
                   border:1px solid #f0f0f0;
                   background:#ffffff;
                   box-shadow:0px 5px 13px rgba(120,136,158,0.07);
