--- a/src/styles/-Sale.scss
+++ b/src/styles/-Sale.scss
@@ -107,6 +107,7 @@
             padding: 3px 0px;
             margin-bottom: 10px;
             border-radius: 3px;
+            cursor: pointer;
            }
          }
      }
