--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -313,8 +313,12 @@
     }
     .item-span-3{
       strong{
-        color:#333;
+        color:#333;        
       }
+    }
+    .item-span-4{
+      color:#2e88ff;
+      font-weight: bold;
     }
   }
 }
