--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -559,6 +559,7 @@
 .btn-back{
   cursor: pointer;
 }
+/** 论坛文章、网站日志详情页默认样式 **/
 .info-content{
   width:100%;
   padding:0;
@@ -1174,12 +1175,16 @@
         float:none;
         width:100%;
         padding-right:0;
-        
+        min-height:auto!important;
+        .article-info{
+          min-height:auto!important;
+        }
       }
       .ArticleSixFr{
         float:none;
         width: 100%;
-        margin-top: 20px!important;
+        margin-top: 15px!important;
+        min-height:auto!important;
       }
   }
   .article-info{
