--- a/src/styles/-Sale.scss
+++ b/src/styles/-Sale.scss
@@ -111,6 +111,11 @@
            }
          }
      }
+     .SiteTable{
+      .SiteColor-01{color: $red;}
+      .SiteColor-02{color: $Rougecolor;}
+      .SiteColor-03{color: $apricot;}      
+     }
 }
 .SaleTips{
    clear: both;
