--- a/src/styles/-Article.scss
+++ b/src/styles/-Article.scss
@@ -342,7 +342,33 @@
             vertical-align:top;
             padding: 5px 0;
             .el-input__inner{
+                background:#f9fbfc;
+                border:1px solid #e9ecf0;
+                border-radius:2px;
+                text-align:left;
+                width:100%;
+                height:32px;
+                line-height:30px;
+                box-sizing:border-box;
                 padding-left:10px;
+                font-size:14px;
+                &:focus{
+                    border-color:$menuActiveText;
+                }
+            }
+            .el-textarea__inner{
+                background:#f9fbfc;
+                border:1px solid #e9ecf0;
+                border-radius:2px;
+                text-align:left;
+                width:100%;
+                line-height:30px;
+                box-sizing:border-box;
+                padding-left:10px;
+                font-size:14px;
+                &:focus{
+                    border-color:$menuActiveText;
+                }
             }
             .el-input{
                 margin: 4px;
