--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -199,9 +199,7 @@
                       }
                       thead{
                         overflow: hidden;
-                        border-radius: 8px;
                         tr{
-                          border-radius: 8px;
                           th.is-leaf{
                             border:0px; 
                             background:#edf2f2;
@@ -362,42 +360,7 @@
             dd{
               .clues-list{
                 .item-clues{
-                  float:left;
-                  position: relative;
-                  font-size: 14px;
-                  color:$menuBg;
-                  cursor: pointer;
-                  padding-left: 20px;
-                  line-height: 24px;
-                  margin-right: 20px;
-                  margin-bottom: 5px;
-                  i{
-                    position: absolute;
-                    left:0px;
-                    top:6px;        
-                    width: 12px;
-                    height: 12px;
-                    box-sizing: border-box;
-                    border-radius:50%;
-                    border:1px solid #939393;
-                    background:#fff;
-                  }
-                  &:hover,&.active{
-                    color:$menuActiveText;
-                    i{
-                      border-color:$menuActiveText;
-                      &:after{
-                        content:'';
-                        position: absolute;
-                        width:4px;
-                        height:4px;
-                        border-radius:50%;
-                        left:3px;
-                        top:3px;
-                        background:$menuActiveText;
-                      }
-                    }
-                  }
+                  width: 145px;
                 }
               }
             }
@@ -628,41 +591,12 @@
       &.EnphoneSearchTwo{
         .team-list{       
           .item-clues{
-            float:left;
-            position: relative;
-            font-size: 14px;
-            color:$menuBg;
-            cursor: pointer;
-            padding-left: 20px;
+            padding: 1px 8px;
             line-height: 24px;
-            margin-left: 20px;
-            margin-top: 2px;
-            i{
-              position: absolute;
-              left:0px;
-              top:6px;        
-              width: 12px;
-              height: 12px;
-              box-sizing: border-box;
-              border-radius:50%;
-              border:1px solid #939393;
-              background:#fff;
-            }
-            &:hover,&.active{
-              color:$menuActiveText;
-              i{
-                border-color:$menuActiveText;
-                &:after{
-                  content:'';
-                  position: absolute;
-                  width:4px;
-                  height:4px;
-                  border-radius:50%;
-                  left:3px;
-                  top:3px;
-                  background:$menuActiveText;
-                }
-              }
+            margin-left:10px;
+            margin-right:0px;
+            i{   
+              margin-top: 5px;   
             }
           }
         }
