--- a/src/styles/-Sale.scss
+++ b/src/styles/-Sale.scss
@@ -121,7 +121,12 @@
      .SiteTable{
       .SiteColor-01{color: $red;}
       .SiteColor-02{color: $Rougecolor;}
-      .SiteColor-03{color: $apricot;}      
+      .SiteColor-03{
+        color: $apricot;
+        &:hover{
+          color: $Rougecolor;
+        }
+      }      
      }
 }
 .SaleTips{
@@ -213,11 +218,6 @@
           float: left;
         }
         .item-clues{
-          float:left;
-          position: relative;
-          font-size: 14px;
-          color:$menuBg;
-          cursor: pointer;
           padding-left: 20px;
           line-height: 24px;
           margin-right: 20px;
