--- a/src/styles/-WebsiteList.scss
+++ b/src/styles/-WebsiteList.scss
@@ -330,14 +330,14 @@
     }
 }
 .drawerBg{
-   position: absolute;
+   position: fixed;
    right:0px;
    top:0px;
    bottom:0px;
    width:0%;
    opacity:0;
    background:rgba(0,0,0,0.6)!important;
-   z-index:3;
+   z-index:11;
    transition:all 0.2s linear;
    &.open{
        width:100%;
@@ -345,28 +345,26 @@
    }
 }
 .WebsiteFixed{
-    position:absolute;
-    right:-320px;
+    position:fixed;
+    right:-300px;
     bottom:0px;
     top:0px;
     width:300px;
     opacity:0;
     transition:right 0.3s ease 0.2s;
-    z-index:4;
+    z-index:12;
     overflow:hidden;
     box-shadow:0 0 10px rgba(0,0,0,0.12);
     background:#fff;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
     ul{
         position:absolute;
         z-index: 3;
         clear:both;
         display:block;
-        padding-right:20px;
         overflow:hidden;
-        overflow-y:scroll;
-        &::-webkit-scrollbar {width:4px;height:1px;}
-        &::-webkit-scrollbar-thumb {box-shadow:inset 0 0 1px $menuText;background:$subMenuBg;}
-        &::-webkit-scrollbar-track {background:#fff;}
+        overflow-y:auto;
         li{
             padding:15px 15px;
             border-top:2px solid #eee;
@@ -457,7 +455,7 @@
     }
     &.open{
         opacity:1;
-        right:-20px;
+        right:0;
     }
 }
 .WebsiteCard.el-card{
