--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -547,6 +547,9 @@
     .search-wrap{
       .item-search{
         float:left;
+        .el-radio{
+          margin: 5px!important;
+        }
       }
     }
   }
