--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -12,6 +12,8 @@ $yellow:#FEC171;
 $panGreen: #1a6fdf;
 $border: #dfe4ed;
 $primaryBorder: #a8d3ff;
+$lightPrimaryBg: #eaf3ff;
+$lightPrimaryBorder: #d5e7ff;
 // sidebar
 $menuText:#bfcbd9;
 $menuActiveText:#2e88ff;
