--- a/src/styles/-public.scss
+++ b/src/styles/-public.scss
@@ -6,7 +6,7 @@
 .flex-box{
     display: flex;
 }
-.flex-panel,.flex-content{
+.flex-content{
     flex:1;
 }
 .flex-column{
@@ -22,6 +22,7 @@
     top:0;
     bottom:0;
 }
+/** 留言系统，中英文询盘系统、业务员询盘系统对应子导航列样式 **/ 
 .sub-router{
     width:190px;
     background-color: #fafafa;
@@ -166,4 +167,135 @@
 }
 .relative{
     position: relative;
+}
+
+/** 移动端筛选公共样式 **/
+.mobile-filter-mask{
+  position: fixed;
+  right:0px;
+  top:0px;
+  bottom:0px;
+  width:100%;
+  opacity:0;
+  background:rgba(0,0,0,0.6)!important;
+  transition:all 0.2s linear;
+  z-index:11;
+  visibility: hidden;
+  &.open{
+      opacity:1;
+      visibility:inherit;
+  }
+}
+/** 移动端筛选公共样式 **/
+.mobile-filter-dialog{
+   position:fixed;
+   right:-300px;
+   bottom:0px;
+   top:0px;
+   width:300px;
+   opacity:0;
+   transition:right 0.3s ease 0.2s;
+   z-index:12;
+   overflow:hidden;
+   box-shadow:0 0 10px rgba(0,0,0,0.12);
+   border-top-left-radius: 10px;
+   border-bottom-left-radius: 10px;
+   .flex-content{
+       position: relative;
+       .abs-scroll{
+           position:absolute;
+           z-index: 3;
+           width: 100%;
+           height: 100%;
+           overflow-y:auto;
+           background:#ffffff;
+       }
+   }
+   ul{
+       background:#f2f2f2;
+       li{
+           padding:15px 15px;
+           background-color: #fff;
+           border-bottom-left-radius: 10px;
+           border-bottom-right-radius: 10px;
+           border-top-left-radius: 10px;
+           border-top-right-radius: 10px;
+           &:first-child{
+               border-top-right-radius: 0;
+           }
+           &:last-child{
+               border-bottom-right-radius: 0;
+               border-bottom-left-radius: 0;
+           }
+           .title-panel{
+               display:block;
+               font-size:14px;
+               font-weight:bold;
+               line-height:24px;
+               margin-bottom: 5px;
+           }
+           .tag-panel{
+               clear:both;
+               display:block;
+               text-align:left;
+               margin: 0 -5px;
+               .item-button{
+                   width: 33.33333%;
+                   padding: 5px;
+                   float:left;
+                   overflow: hidden;
+                   .el-button,span.el-tag{
+                       display: block;
+                       width:100%;
+                       background:$subMenuActiveText;
+                       border-color:$subMenuActiveText;
+                       color:$menuHover;
+                       text-align:center;
+                       padding:5px;
+                       border-radius:15px;
+                       line-height:20px;
+                       height: auto;
+                       font-size:12px;
+                       &.is-plain{
+                           color:$menuActiveText;
+                           background:$lightPrimaryBg;
+                           border-color:$lightPrimaryBorder;
+                       }
+                   }
+               }
+           }
+           &.column-2{
+               .tag-panel{
+                   .item-button{
+                       width: 50%;
+                   }
+               }
+           }
+       }
+       li+li{
+           margin-top: 10px;
+       }
+   }
+   .footer-button{
+       text-align:center;
+       border-top: 1px solid #f4f4f4;
+       background-color: #fff;
+       padding: 10px;
+       .btn-yes{
+           display:block;
+           width:60%;
+           margin:0 auto;
+           color:#fff;
+           background:#2e84f6;
+           text-align:center;
+           padding:5px 5px;
+           border-radius:30px;
+           line-height:24px;
+           font-size:12px;
+       }
+   }
+   &.open{
+       opacity:1;
+       right:0;
+   }
 }
