--- a/src/styles/-public.scss
+++ b/src/styles/-public.scss
@@ -169,6 +169,77 @@
     position: relative;
 }
 
+/** 移动端搜索条件过滤行样式 **/
+.filter-panel{                
+    display: flex;
+    flex-direction: row;
+    background: #fff!important;
+    padding: 6px 0 6px 10px;
+    &:before{display: none;}
+    .search-panel{
+        flex:1;
+        padding-right: 10px;
+        &:before{display: none;}
+        .article-search{
+            font-size: 12px;
+            background-color: #fff;
+            border-radius: 16px;
+            border:1px solid #DCDFE6;
+            .el-input__inner{                            
+                height: 30px;
+                line-height: 30px;
+                padding: 0 10px;
+                font-size: 14px;
+                background: transparent;
+                color:#ddd;
+                border:none;
+            }
+            .el-input-group__append{                    
+                padding: 0 10px;
+                background-color: transparent;
+                border:none;
+                width: 40px;
+                text-align: center;
+                .el-button{        
+                    font-size: 0;
+                    line-height: 0;
+                    padding: 0;
+                    vertical-align: top;
+                    margin:0;
+                    border:none;
+                    >span{
+                        display: block;
+                        font-size: 0;
+                        line-height: 0;
+                    }
+                    .search-icon{    
+                        display: block;                        
+                        height: 30px;
+                        line-height: 30px;
+                        font-size: 20px;
+                        color: #cccccc;
+                        .svg-icon{
+                            vertical-align: top;
+                            margin-top: 5px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .filter-button{
+      color: #1f2d3d;
+      font-size: 13px;
+      line-height: 22px;
+      display: inline-block;
+      background: #fff;
+      padding: 5px 10px;
+      cursor: pointer;
+      .svg-i{
+          margin-left: 5px;
+      }
+    }
+}
 /** 移动端筛选公共样式 **/
 .mobile-filter-mask{
   position: fixed;
@@ -235,7 +306,6 @@
                margin-bottom: 5px;
            }
            .tag-panel{
-               clear:both;
                display:block;
                text-align:left;
                margin: 0 -5px;
@@ -269,6 +339,18 @@
                    .item-button{
                        width: 50%;
                    }
+               }
+           }
+           .item-li{
+               margin-bottom: 20px;
+           }
+           .item-filter{
+               width: 100%;
+               line-height:0;
+               font-size:0;
+               .el-select,.el-input,.el-date-picker{
+                   display: block;
+                   width: 100%;
                }
            }
        }
