--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -641,6 +641,7 @@
   .card-header.EnphoneCardHeader{
     .clues-info.flex-wrap{
       display: block;
+      padding:0px 10px 10px 10px;
       .clues-title-btn{
         padding-left:0px;
         padding-top:15px;
