--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -353,6 +353,13 @@
     }
   }
 }
+.mobile{
+  .clues-info{
+    .clues-infoFl{
+      margin-right:0px;
+    }  
+  }
+}
 /** 自定义表格 **/
 .border-wrap{
   display:block;
